--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  height: 100px;
 }
 
 .logo {
@@ -9,12 +12,24 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 0px auto; 
 }
+
+
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  row-gap: 10px;
+  padding: 0px;
 }
+
+li {
+  margin:10px;
+}
+
 
 a {
   font-size: 22px;
