--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0px 10px;
 }
 
 .profile-image {
@@ -45,4 +49,23 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 0px 20px;
+
+  padding: 0px;
+}
+
+li {
+  padding: 0px;
+}
+
+.left{
+  display: flex;
+  gap: 0px 20px;
+}
+
+.right {
+  display: flex;
+  gap: 0px 20px; /*row-gap column-gap*/
+  margin-left: auto;
 }
