--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,24 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.container{
+  margin-bottom: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.item-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0px 52px;
+}
+.item1, .item2, .item3, .item4 {
+  display: flex;
+  width: 200px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
